<resources>
    <string name="app_name">News App</string>
    <string name="no_news">No news found.</string>
    <string name="no_internet">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Strings for search EditPreference-->
    <string name="settings_search_default">Google</string>
    <string name="settings_search_key" translatable="false">search_data</string>
    <string name="settings_search_label">Search keywords</string>

    <!-- Strings for search ListPreference-->
    <string name="settings_sections_default">none</string>
    <string name="settings_sections_key" translatable="false">sections_data</string>
    <string name="settings_sections_label">Sections</string>

    <!-- Strings for search ListPreference-->


    <!--Array label labels for sections -->
    <string name="settings_search_art_and_design_label">Art and design"</string>
    <string name="settings_search_australia_news_label" >Australia news"</string>
    <string name="settings_search_better_business_label">Better Business</string>
    <string name="settings_search_books_label">Books</string>
    <string name="settings_business_label">Business</string>
    <string name="settings_cardiff_label">Cardiff</string>

    <!--Array label values for sections -->
    <string name="settings_search_art_and_design_value">artanddesign</string>
    <string name="settings_search_australia_news_value">austalia-news</string>
    <string name="settings_cardiff_value">cardiff</string>
    <string name="settings_business_value">business</string>
    <string name="settings_search_books_value">books</string>
    <string name="settings_search_better_business_value">better-business</string>

    <string name="settings_order_default">none</string>
    <string name="settings_order_key" translatable="false">order_data</string>
    <string name="settings_order_label">Order by</string>

    <string name="settings_order_newest_label">Newest</string>
    <string name="settings_order_oldest_label">Oldest</string>
    <string name="settings_order_relevance_label">Relevance</string>
    <string name="settings_order_newest_value">newest</string>
    <string name="settings_order_oldest_value">oldest</string>
    <string name="settings_order_relevance_value">relevance</string>
    <string name="settings_order_none_value">none</string>
    <string name="settings_order_none_label">None</string>

</resources>
