<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <EditTextPreference
        android:defaultValue="@string/settings_search_default"
        android:inputType="text"
        android:key="@string/settings_search_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_default"
        android:entries="@array/settings_order_labels"
        android:entryValues="@array/settings_order_values"
        android:key="@string/settings_order_key"
        android:title="@string/settings_order_label" />

    <ListPreference
        android:defaultValue="@string/settings_sections_default"
        android:entries="@array/settings_sections_labels"
        android:entryValues="@array/settings_sections_values"
        android:key="@string/settings_sections_key"
        android:title="@string/settings_sections_label" />

    <!-- Label for order-by magnitude option [CHAR LIMIT=20]
       <ListPreference
           android:defaultValue="@string/settings_order_by_default"
           android:entries="@array/settings_order_by_labels"
           android:entryValues="@array/settings_order_by_values"
           android:key="@string/settings_order_by_key"
           android:title="@string/settings_order_by_label"/>
           -->

</PreferenceScreen>